refactor: adicionado validade-token e alteração compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,23 @@
- version: "1"
- services:
-    tutorial:
-      build:
-        context: .
-        dockerfile: Dockerfile
-      ports:
-        - "8000:8000"
-      volumes:
-        - .:/app
-        - /app/.venv
-      command:
-              sh -c "
-              python main.py
-              "
+version: "1"
+networks:
+  services:
+    external: true
+
+services:
+  auth:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - "8000:8000"
+    volumes:
+      - .:/app
+      - /app/.venv
+    networks:
+      - services
+    expose:
+      - 8000
+    command: >
+      sh -c "
+      python main.py
+      "
